--- a/src/app/ui/Layout.module.scss
+++ b/src/app/ui/Layout.module.scss
@@ -1,8 +1,10 @@
-@import "src/shared/lib/style-variables/variables.scss";
+@import "src/shared/lib/style-variables/variables";
+@import "src/shared/fonts/fonts";
 @import "src/shared/lib/css-reset/css-reset.scss";
 
 body {
   background-color: $primary-color;
+  font-family: $sora-font!important;
 }
 
 .container {
