--- a/src/widgets/navbar/components/Navbar.module.scss
+++ b/src/widgets/navbar/components/Navbar.module.scss
@@ -1,9 +1,11 @@
-@import "src/shared/lib/style-variables/variables.scss";
+@import "../../../shared/lib/style-variables/variables";
 @import "src/shared/lib/css-reset/css-reset.scss";
 
 .container {
   display: flex;
   flex-direction: column;
-  min-width: 100px;
+  align-items: start;
+  margin-inline: 12px;
+  min-width: 250px;
   min-height: 100vh;
 }
