--- a/src/app/components/Layout.module.scss
+++ b/src/app/components/Layout.module.scss
@@ -13,7 +13,7 @@ body {
   width: 900px;
   margin-inline: auto;
   min-height: 100vh;
-  background-color: transparentize($secondary-color, 0.95);
+  //background-color: transparentize($secondary-color, 0.95);
   color: $tertiary-color;
 
   .content {
