--- a/src/shared/ui/fillable-icon/components/FillableIcon.module.scss
+++ b/src/shared/ui/fillable-icon/components/FillableIcon.module.scss
@@ -1,27 +1,37 @@
 @import "src/shared/lib/style-variables/variables";
 @import "src/shared/fonts/fonts";
 
-
 .container {
-  $logo-size: 40px;
+  --logo-size: 40px;
 
   display: flex;
-  flex-direction: row;
+  justify-items: center;
   align-items: center;
-  max-height: 50px;
-  gap: 12px;
 
   > svg {
-    height: $logo-size;
-    width: $logo-size;
-    min-width: $logo-size;
-    min-height: $logo-size;
+    max-height: var(--logo-size);
+    max-width: var(--logo-size);
+    min-width: var(--logo-size);
+    min-height: var(--logo-size);
     fill: $tertiary-color
   }
 
-  > span {
-    font-size: 30px;
-    font-family: $sen-regular-font;
-    text-align: center;
+  &[data-size='0'] {
+    --logo-size: 10px;
+  }
+  &[data-size='1'] {
+    --logo-size: 20px;
+  }
+  &[data-size='2'] {
+    --logo-size: 30px;
+  }
+  &[data-size='3'] {
+    --logo-size: 40px;
+  }
+  &[data-size='4'] {
+    --logo-size: 50px;
+  }
+  &[data-size='5'] {
+    --logo-size: 60px;
   }
 }
