--- a/src/shared/ui/nav-button/components/NavButton.module.scss
+++ b/src/shared/ui/nav-button/components/NavButton.module.scss
@@ -3,11 +3,14 @@
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  gap: 8px;
   margin-top: 8px;
   text-decoration: none;
   color: $tertiary-color;
   font-size: 18px;
+  font-weight: 500;
   padding: 16px;
   border-radius: 50px;
   transition: 0.1s;
