--- a/src/app/components/Layout.module.scss
+++ b/src/app/components/Layout.module.scss
@@ -10,14 +10,50 @@ body {
 .container {
   display: flex;
   flex-direction: row;
-  width: 900px;
   margin-inline: auto;
   min-height: 100vh;
-  //background-color: transparentize($secondary-color, 0.95);
   color: $tertiary-color;
+  background-color: transparentize($tertiary-color, 0.9);
+  max-width: 80%;
 
   .content {
     min-height: 100vh;
+    flex: 11;
     width: 100%;
+    border-left: 1px solid transparentize($tertiary-color, 0.9);
+  }
+
+  .header {
+    flex: 2;
+    min-width: $navbar-full-width;
+
+    > div {
+      position: fixed;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
 }
+
+@media (max-width: 768px) {
+  .container {
+    margin-inline: 4px;
+  }
+}
+
+@media (min-width: 768px) {}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: none;
+    margin-inline: 0;
+    .header {
+      flex: 1;
+      min-width: $navbar-minimized-width;
+    }
+  }
+}
+
+@media (min-width: 1200px) {}
