--- a/src/shared/lib/style-variables/variables.scss
+++ b/src/shared/lib/style-variables/variables.scss
@@ -3,5 +3,7 @@ $primary-color: #29292f;
 $secondary-color: #374bcb;
 $tertiary-color: #ddddef;
 
+$navbar-full-width: 220px;
+$navbar-minimized-width: 80px;
 
 
