--- a/src/shared/ui/button/components/Button.module.scss
+++ b/src/shared/ui/button/components/Button.module.scss
@@ -1,5 +1,24 @@
 @import "../../../lib/style-variables/variables";
 
 .container {
+  display: flex;
+  border: none;
+  flex-direction: row;
+  background: none;
 
+  justify-items: center;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  color: $tertiary-color;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 14px;
+  border-radius: 50px;
+  transition: 0.1s;
+
+  &:hover {
+    background-color: transparentize($tertiary-color, 0.9);
+    cursor: pointer;
+  }
 }
