--- a/src/widgets/sidebar/components/Sidebar.module.scss
+++ b/src/widgets/sidebar/components/Sidebar.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  margin-inline: 12px;
-  min-width: 250px;
   min-height: 100vh;
+  border-left: 1px solid transparentize($tertiary-color, 0.9);
+
 }
