--- a/src/shared/fonts/fonts.scss
+++ b/src/shared/fonts/fonts.scss
@@ -1,22 +1,22 @@
 
 @font-face {
   font-family: "Sen Regular";
-  src: url('Sen-Regular.ttf') format('truetype');
+  src: url('../../public/fonts/Sen-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: "Sen Bold";
-  src: url('Sen-Bold.ttf') format('truetype');
+  src: url('../../public/fonts/Sen-Bold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: "Sen ExtraBold";
-  src: url('Sen-ExtraBold.ttf') format('truetype');
+  src: url('../../public/fonts/Sen-ExtraBold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: "Sora";
-  src: url('Sora.ttf') format('truetype');
+  src: url('../../public/fonts/Sora.ttf') format('truetype');
 }
 
 $sen-regular-font: "Sen Regular", sans-serif;
