--- a/src/shared/ui/page-header/components/PageHeader.module.scss
+++ b/src/shared/ui/page-header/components/PageHeader.module.scss
@@ -1,21 +1,6 @@
-@import "src/shared/lib/style-variables/variables";
+@import "../../../themes/style-variables/variables";
 
 .container {
-  display: flex;
-  flex-direction: row;
-  height: 1200px;
-  overflow-x: clip;
-
-  > div:first-child {
-    flex: 9;
-  }
-
-  > div:last-child {
-    flex: 3;
-  }
-}
-
-.header {
   top: -0.5px;
   position: sticky;
   backface-visibility: hidden;
@@ -23,7 +8,4 @@
   height: 40px;
   background-color: transparentize($tertiary-color, 0.9);
   border-bottom: 1px solid transparentize($tertiary-color, 0.9);
-  > div {
-
-  }
 }
