--- a/src/shared/ui/fillable-icon/components/FillableIcon.module.scss
+++ b/src/shared/ui/fillable-icon/components/FillableIcon.module.scss
@@ -1,4 +1,4 @@
-@import "src/shared/lib/style-variables/variables";
+@import "../../../themes/style-variables/variables";
 @import "src/shared/fonts/fonts";
 
 .container {
