--- a/src/shared/ui/icon/components/Icon.module.scss
+++ b/src/shared/ui/icon/components/Icon.module.scss
@@ -1,6 +1,4 @@
-@import "src/shared/lib/style-variables/variables";
-@import "src/shared/fonts/fonts";
-
+@import "../../../themes/style-variables/variables";
 
 .container {
   --logo-size: 40px;
