--- a/src/widgets/post-card-list/components/PostCardList.module.scss
+++ b/src/widgets/post-card-list/components/PostCardList.module.scss
@@ -1,5 +1,5 @@
-@import "../../../shared/lib/style-variables/variables";
-@import "src/shared/lib/css-reset/css-reset.scss";
+@import "../../../shared/themes/style-variables/variables";
+@import "../../../shared/themes/css-reset/css-reset.scss";
 
 .container {
   display: flex;
