--- a/src/shared/ui/modal-window/components/ModalWindow.module.scss
+++ b/src/shared/ui/modal-window/components/ModalWindow.module.scss
@@ -22,4 +22,20 @@
   border-radius: 25px;
   background-color: $primary-color;
   border: 1px solid $secondary-color;
+
+  > div {
+    padding: 4px;
+  }
+
+  > div:has(h3) {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid transparentize($tertiary-color, 0.9);
+
+    h3 {
+      font-size: 18px;
+    }
+  }
+
+
 }
