--- a/src/shared/ui/image/components/Image.module.scss
+++ b/src/shared/ui/image/components/Image.module.scss
@@ -1,5 +1,32 @@
 @import "../../../themes/style-variables/variables";
 
 .container {
+  overflow: clip;
 
+  &[data-image-type="avatar"] {
+    border-radius: 50%;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  &[data-size="0"] {
+    width: 30px;
+  }
+  &[data-size="1"] {
+    width: 50px;
+  }
+  &[data-size="2"] {
+    width: 80px;
+  }
+  &[data-size="3"] {
+    width: 100px;
+  }
+  &[data-size="4"] {
+    width: 120px;
+  }
+  &[data-size="5"] {
+    width: 140px;
+  }
 }
