add user components & postCard styles

--- a/src/shared/themes/style-variables/variables.scss
+++ b/src/shared/themes/style-variables/variables.scss
@@ -3,6 +3,10 @@ $primary-color: #17171a;
 $secondary-color: #374bcb;
 $tertiary-color: #ddddef;
 
+$blue: #2251ab;
+$red: #f9185c;
+$orange: #b66b16;
+
 $navbar-full-width: 220px;
 $navbar-minimized-width: 80px;
 
