--- a/src/shared/ui/page-header/components/PageHeader.module.scss
+++ b/src/shared/ui/page-header/components/PageHeader.module.scss
@@ -4,8 +4,17 @@
   top: -0.5px;
   position: sticky;
   backface-visibility: hidden;
+  display: flex;
   box-sizing: border-box;
   height: 40px;
+  padding: 8px;
   background-color: transparentize($tertiary-color, 0.9);
   border-bottom: 1px solid transparentize($tertiary-color, 0.9);
+  backdrop-filter: blur(2px);
+
+  > div {
+    display: flex;
+    font-weight: 800;
+    align-items: center;
+  }
 }
