--- a/src/shared/ui/button/components/Button.module.scss
+++ b/src/shared/ui/button/components/Button.module.scss
@@ -17,12 +17,18 @@
   border-radius: 50px;
   transition: 0.1s;
 
+  svg {
+    transition: 0.2s;
+  }
+
   &[data-hover-highlight="icon"] {
     div:has(svg) {
       padding: 8px;
       border-radius: 25px;
     }
   }
+
+
 
   &:hover {
     cursor: pointer;
@@ -35,5 +41,63 @@
         background-color: transparentize($tertiary-color, 0.9);
       }
     }
+
+    &[data-hover-color="default"] {
+      color: $tertiary-color;
+      svg {
+        fill: $tertiary-color
+      }
+    }
+    &[data-hover-color="blue"] {
+      color: $blue;
+      svg {
+        fill: $blue
+      }
+    }
+    &[data-hover-color="red"] {
+      color: $red;
+      svg {
+        fill: $red
+      }
+    }
+    &[data-hover-color="orange"] {
+      color: $orange;
+      svg {
+        fill: $orange
+      }
+    }
+
   }
+
+  &[data-size="0"] {
+    padding: 8px;
+    gap: 2px;
+    font-size: 10px;
+  }
+  &[data-size="1"] {
+    padding: 8px;
+    gap: 4px;
+    font-size: 12px;
+  }
+  &[data-size="2"] {
+    padding: 10px;
+    gap: 6px;
+    font-size: 14px;
+  }
+  &[data-size="3"] {
+    padding: 12px;
+    gap: 8px;
+    font-size: 16px;
+  }
+  &[data-size="4"] {
+    padding: 14px;
+    gap: 8px;
+    font-size: 18px;
+  }
+  &[data-size="5"] {
+    padding: 16px;
+    gap: 10px;
+    font-size: 20px;
+  }
+
 }
