--- a/src/widgets/post-card/components/PostCard.module.scss
+++ b/src/widgets/post-card/components/PostCard.module.scss
@@ -1,8 +1,42 @@
 @import "../../../shared/themes/style-variables/variables";
-@import "../../../shared/themes/css-reset/css-reset.scss";
 
 .container {
   display: flex;
+  padding: 12px;
+  gap: 12px;
+  flex-direction: row;
+  border-bottom: 1px solid transparentize($tertiary-color, 0.9);
+
+  .main {
+    flex: 10;
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+
+      > div {
+        display: flex;
+        flex-direction: row;
+        align-items: end;
+        gap: 4px;
+      }
+    }
+
+    .content {
+      display: flex;
+    }
+
+    .footer {
+      margin-top: 8px;
+      height: 30px;
+      display: flex;
+    }
+  }
 }
 
 
