add nav tab & fix images

--- a/src/shared/ui/button/components/Button.module.scss
+++ b/src/shared/ui/button/components/Button.module.scss
@@ -5,6 +5,7 @@
   border: none;
   flex-direction: row;
   background: none;
+  justify-content: center;
 
   justify-items: center;
   align-items: center;
