--- a/src/shared/ui/empty-image/components/EmptyImage.module.scss
+++ b/src/shared/ui/empty-image/components/EmptyImage.module.scss
@@ -3,5 +3,5 @@
 .image {
   width: 100%;
   min-height: 50px;
-  background-color: transparentize($tertiary-color, 0.5);
+  background-color: #7a7a85;
 }
