--- a/src/shared/ui/link-button/components/LinkButton.module.scss
+++ b/src/shared/ui/link-button/components/LinkButton.module.scss
@@ -1,7 +1,7 @@
 @import "../../../themes/style-variables/variables";
 
 .container {
-  display: inline;
+  display: flex;
   text-decoration: none;
   color: $tertiary-color;
   font-size: 18px;
