--- a/src/shared/ui/page-header/components/PageHeader.module.scss
+++ b/src/shared/ui/page-header/components/PageHeader.module.scss
@@ -5,6 +5,7 @@
   position: sticky;
   backface-visibility: hidden;
   display: flex;
+  gap: 8px;
   box-sizing: border-box;
   height: 60px;
   padding: 8px;
