--- a/src/widgets/user-info/components/UserInfo.module.scss
+++ b/src/widgets/user-info/components/UserInfo.module.scss
@@ -39,7 +39,13 @@
     padding: 12px;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 24px;
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
   }
 }
 
