--- a/src/entities/message/components/message-card/components/MessageCard.module.scss
+++ b/src/entities/message/components/message-card/components/MessageCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../../shared/themes/style-variables/variables";
+@import "../../../../../shared/themes/style-variables/variables";
 
 .container {
   display: flex;
