--- a/src/entities/post/components/post-card/components/PostCard.module.scss
+++ b/src/entities/post/components/post-card/components/PostCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../../shared/themes/style-variables/variables";
+@import "../../../../../shared/themes/style-variables/variables";
 
 .container {
   display: flex;
