fix icons & add user link, open dialog button

--- a/src/entities/post/components/post-card/components/PostCard.module.scss
+++ b/src/entities/post/components/post-card/components/PostCard.module.scss
@@ -18,6 +18,11 @@
       flex-direction: row;
       justify-content: space-between;
 
+      a {
+        color: $tertiary-color;
+        text-decoration: none;
+      }
+
       > div {
         display: flex;
         flex-direction: row;
