--- a/src/shared/ui/hover-card/components/HoverCard.module.scss
+++ b/src/shared/ui/hover-card/components/HoverCard.module.scss
@@ -15,7 +15,9 @@
   display: flex;
   flex-direction: column;
   position: absolute;
+  padding-block: 4px;
   width: 150px;
+  border-radius: 8px;
   color: $tertiary-color;
   background-color: $primary-color;
   border: 1px solid transparentize($tertiary-color, 0.5);
