fix buttons, modal window & add post creation window

--- a/src/entities/dialog/components/dialog-card/components/DialogCard.module.scss
+++ b/src/entities/dialog/components/dialog-card/components/DialogCard.module.scss
@@ -23,7 +23,7 @@
       > div {
         display: flex;
         flex-direction: row;
-        align-items: end;
+        align-items: flex-end;
         gap: 4px;
       }
     }
