--- a/src/shared/ui/component-list/components/ComponentList.module.scss
+++ b/src/shared/ui/component-list/components/ComponentList.module.scss
@@ -7,6 +7,12 @@
   > * {
     border-bottom: 1px solid transparentize($tertiary-color, 0.9);
   }
+
+  &[data-borders="none"] {
+    > * {
+      border: none;
+    }
+  }
 }
 
 
