--- a/src/shared/ui/nav-button/components/NavButton.module.scss
+++ b/src/shared/ui/nav-button/components/NavButton.module.scss
@@ -1,6 +1,7 @@
 @import "../../../themes/style-variables/variables";
 
 .container {
+  display: flex;
   text-decoration: none;
   color: $tertiary-color;
   font-size: 18px;
