--- a/src/widgets/navbar/components/Navbar.module.scss
+++ b/src/widgets/navbar/components/Navbar.module.scss
@@ -3,8 +3,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   margin-inline: 12px;
+  gap: 4px;
   max-width: $navbar-full-width;
 }
 
@@ -20,14 +21,11 @@
   .container {
     margin-inline: 4px;
     max-width: $navbar-minimized-width;
-    a {
-      font-size: 0;
-      div {
-        display: none;
-      }
-      div:has(svg) {
-        display: flex;
-      }
+    div {
+      display: none;
+    }
+    div:has(svg) {
+      display: flex;
     }
   }
 
