--- a/src/shared/ui/component-list/components/ComponentList.module.scss
+++ b/src/shared/ui/component-list/components/ComponentList.module.scss
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 100px;
 
   > * {
     border-bottom: 1px solid transparentize($tertiary-color, 0.9);
