--- a/src/entities/dialog/components/dialog-card/components/DialogCard.module.scss
+++ b/src/entities/dialog/components/dialog-card/components/DialogCard.module.scss
@@ -30,6 +30,8 @@
 
     .content {
       display: flex;
+      flex-direction: column;
+      color: transparentize($tertiary-color, 0.5);
     }
   }
 
