refactored message card & fix hover card

--- a/src/shared/ui/page-header/components/PageHeader.module.scss
+++ b/src/shared/ui/page-header/components/PageHeader.module.scss
@@ -12,6 +12,7 @@
   background-color: transparentize($primary-color, 0.2);
   border-bottom: 1px solid transparentize($tertiary-color, 0.9);
   backdrop-filter: blur(6px);
+  z-index: 999;
 
   > div {
     display: flex;
