add option buttons for post and message

--- a/src/shared/ui/hover-card/components/HoverCard.module.scss
+++ b/src/shared/ui/hover-card/components/HoverCard.module.scss
@@ -17,6 +17,7 @@
   position: absolute;
   padding-block: 4px;
   width: 150px;
+  min-height: 40px;
   border-radius: 8px;
   color: $tertiary-color;
   background-color: $primary-color;
