--- a/src/widgets/post-card/components/PostCard.module.scss
+++ b/src/widgets/post-card/components/PostCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../shared/themes/style-variables/variables";
+@import "../../../shared/themes/style-variables/variables";
 
 .container {
   display: flex;
@@ -17,6 +17,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      margin-bottom: -10px;
 
       a {
         color: $tertiary-color;
@@ -26,7 +27,6 @@
       > div {
         display: flex;
         flex-direction: row;
-        align-items: flex-end;
         gap: 4px;
       }
     }
