--- a/src/widgets/user-info/components/UserInfo.module.scss
+++ b/src/widgets/user-info/components/UserInfo.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 50px;
+    height: 60px;
 
     margin-bottom: 30px;
 
@@ -30,7 +30,10 @@
     }
 
     > div:last-child {
-      padding: 20px;
+      display: flex;
+      gap: 10px;
+      flex-direction: row;
+      padding: 10px;
     }
 
   }
