add post fetching with filter

--- a/src/shared/ui/side-container-element/components/SideContainerElement.module.scss
+++ b/src/shared/ui/side-container-element/components/SideContainerElement.module.scss
@@ -1,12 +1,21 @@
 @import "../../../themes/style-variables/variables";
 
 .container {
-  position: sticky;
   display: flex;
-  top: -12px;
+  flex-direction: column;
+  width: 100%;
   margin: 12px 12px 0 12px;
-  border-radius: 25px;
+  border-radius: 15px;
   padding: 8px;
   background-color: transparentize($tertiary-color, 0.9);
   border: 1px solid transparentize($tertiary-color, 0.9);
+
+  .title {
+    font-size: 20px;
+    font-weight: 700;
+    width: 100%;
+    border-bottom: 1px solid transparentize($tertiary-color, 0.9);
+    padding: 8px;
+    margin-bottom: 8px;
+  }
 }
