--- a/src/shared/ui/component-list/components/ComponentList.module.scss
+++ b/src/shared/ui/component-list/components/ComponentList.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 100px;
+  width: 100%;
 
   > * {
     border-bottom: 1px solid transparentize($tertiary-color, 0.9);
