--- a/src/widgets/sidebar/components/Sidebar.module.scss
+++ b/src/widgets/sidebar/components/Sidebar.module.scss
@@ -1,11 +1,25 @@
 @import "../../../shared/themes/style-variables/variables";
 
 .container {
-  flex: 3;
+  flex: 2;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   min-height: 100vh;
   border-left: 1px solid transparentize($tertiary-color, 0.9);
 
+  > div {
+    display: flex;
+    position: sticky;
+    width: 100%;
+    max-width: 300px;
+    min-width: 300px;
+    top: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    display: none;
+  }
 }
