--- a/src/widgets/sidebar/components/Sidebar.module.scss
+++ b/src/widgets/sidebar/components/Sidebar.module.scss
@@ -9,20 +9,25 @@
   border-left: 1px solid transparentize($tertiary-color, 0.9);
 
   > div {
-    display: flex;
+    top: 0.5px;
     flex-direction: column;
     position: sticky;
     width: 100%;
+    height: 100%;
 
     max-width: 300px;
     min-width: 250px;
 
 
     > div {
-      display: flex;
+      top: 72px;
+      position: sticky;
       flex-direction: column;
       padding: 12px;
-      gap: 12px;
+
+      > div {
+        margin-bottom: 12px;
+      }
     }
   }
 }
