--- a/src/shared/ui/image/components/Image.module.scss
+++ b/src/shared/ui/image/components/Image.module.scss
@@ -3,7 +3,7 @@
 .container {
   overflow: clip;
   width: 100%;
-  background-color: #7a7a85;
+  background-color: $tertiary-color;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -14,7 +14,6 @@
 
   img {
     width: 100%;
-    height: 100%;
     aspect-ratio: 1;
   }
 
