add image display to message and post cards

--- a/src/shared/themes/style-variables/variables.scss
+++ b/src/shared/themes/style-variables/variables.scss
@@ -12,5 +12,7 @@ $orange: #b66b16;
 $navbar-full-width: 220px;
 $navbar-minimized-width: 70px;
 $page-max-width: clamp(580px, 580px, 100%);
+$message-bar-height: 182px;
+$page-header-height: 60px;
 
 
