--- a/src/widgets/post-card/components/PostCard.module.scss
+++ b/src/widgets/post-card/components/PostCard.module.scss
@@ -33,6 +33,12 @@
 
     .content {
       display: flex;
+      flex-direction: column;
+      gap: 12px;
+
+      > div:has(img) {
+        max-height: 500px;
+      }
     }
 
     .footer {
