--- a/src/shared/ui/image/components/Image.module.scss
+++ b/src/shared/ui/image/components/Image.module.scss
@@ -3,18 +3,23 @@
 .container {
   overflow: clip;
   width: 100%;
+  height: 100%;
   background-color: $tertiary-color;
   align-items: center;
   display: flex;
   justify-content: center;
+  border-radius: 15px;
 
   &[data-image-type="avatar"] {
     border-radius: 50%;
+    height: auto;
+    img {
+      aspect-ratio: 1;
+    }
   }
 
   img {
     width: 100%;
-    aspect-ratio: 1;
   }
 
   &[data-size="0"] {
