--- a/src/widgets/message-input-bar/components/MessageInputBar.module.scss
+++ b/src/widgets/message-input-bar/components/MessageInputBar.module.scss
@@ -1,11 +1,9 @@
 @import "../../../shared/themes/style-variables/variables";
 
 .container {
-  position: fixed;
-  bottom: 0;
-  width: $page-max-width;
   padding: 8px;
   background-color: $primary-color;
+  max-height: $message-bar-height;
   border-top: 1px solid transparentize($tertiary-color, 0.9);
 
   > div {
