--- a/src/shared/ui/component-list/components/ComponentList.module.scss
+++ b/src/shared/ui/component-list/components/ComponentList.module.scss
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  padding-block: 8px;
   width: 100%;
 
   > * {
@@ -13,6 +14,10 @@
     > * {
       border: none;
     }
+  }
+
+  &[data-reverse="true"] {
+    flex-direction: column-reverse;
   }
 }
 
