--- a/src/features/create-message-form/components/CreateMessageForm.module.scss
+++ b/src/features/create-message-form/components/CreateMessageForm.module.scss
@@ -11,15 +11,47 @@
   > div {
     display: flex;
     align-content: center;
-    width: 100%;
-    padding: 8px;
-  }
-
-  > div:first-child {
-    border-bottom: 1px solid transparentize($tertiary-color, 0.9);
   }
 
   .image_preview {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    background-color: transparentize($tertiary-color, 0.9);
+    padding: 8px;
+    border-radius: 15px;
+    bottom: $message-bar-height;
 
+    > div {
+      display: flex;
+      position: relative;
+      transition: 0.3s;
+
+      &:hover {
+        cursor: pointer;
+
+        > div:last-child {
+          opacity: 1;
+        }
+      }
+
+      > div:last-child {
+        position: absolute;
+        background-color: transparentize($primary-color, 0.4);
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: 0.3s;
+        border-radius: 15px;
+
+        svg {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
   }
 }
