--- a/src/features/create-message-form/components/CreateMessageForm.module.scss
+++ b/src/features/create-message-form/components/CreateMessageForm.module.scss
@@ -50,6 +50,7 @@
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+          fill: $tertiary-color;
         }
       }
     }
