--- a/src/features/create-post-form/components/CreatePostForm.module.scss
+++ b/src/features/create-post-form/components/CreatePostForm.module.scss
@@ -14,6 +14,39 @@
   }
 
   .image_preview {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
 
+    > div {
+      display: flex;
+      position: relative;
+      transition: 0.3s;
+
+      &:hover {
+        cursor: pointer;
+
+        > div:last-child {
+          opacity: 1;
+        }
+      }
+
+      > div:last-child {
+        position: absolute;
+        background-color: transparentize($primary-color, 0.4);
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: 0.3s;
+        border-radius: 15px;
+
+        svg {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
   }
 }
