--- a/src/shared/ui/message-page-layout/components/MessagePageLayout.module.scss
+++ b/src/shared/ui/message-page-layout/components/MessagePageLayout.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  max-height: 100%;
+  height: 100%;
 
   > div:first-child {
     flex: 1;
