add edit button to message card and edit message form

--- a/src/entities/message/components/Message.module.scss
+++ b/src/entities/message/components/Message.module.scss
@@ -1,6 +1,9 @@
 @import "src/shared/themes/style-variables/variables";
 
 .message_creation_date {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
   font-size: 15px;
   font-weight: 300;
   color: transparentize($tertiary-color, 0.3);
